--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,8 @@
-@import "{{ site.theme }}"
+---
+---
+
+@import "{{ site.theme }}";
 
 .wrapper {
-	max-width: 1500px;
-	width: 70%;
+	max-width: 80%;
 }
